@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: libgnome
 Description: libgnome
-Requires: glib-2.0 ORBit-2.0 gconf-2.0 libgnomebase-2.0 @LIBGNOME_EXTRA_DEPS@
+Requires: glib-2.0 ORBit-2.0 gconf-2.0 libgnomebase-2.0 libbonobo-2.0
 Version: @VERSION@
 Libs: -L${libdir} -lgnome-2
 Cflags: -I${includedir}/gnome/2
